# sdvx-update-hook

./: .pre-commit-config.yaml  current_urls.txt  pyproject.toml  requirements.txt  updatehook.py  updatehook_iv.py  urls.txt  urls_iv.txt
.github/: dependabot.yml
.github/workflows/: scrape.yml
