[tool.poetry]
name = "discord"
version = "0.1.0"
description = ""
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = {extras = ["cssselect"], version = "^4.9.2"}
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
black = "^23.7"
isort = "^5.12.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
