[tool.poetry]
name = "discord"
version = "0.1.0"
description = ""
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = {extras = ["cssselect"], version = "^5.3.0"}
aiohttp = "^3.10.9"

[tool.poetry.dev-dependencies]
black = "^24.8"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
