[tool.poetry]
name = "discord"
version = "0.1.0"
description = ""
authors = ["Hannah Herbig <nothannahherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = {extras = ["cssselect"], version = "^5.3.1"}
aiohttp = "^3.10.11"

[tool.poetry.group.dev.dependencies]
black = "^24.8"
isort = "^5.13.2"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
